<resources>
    <string name="launch_name">Clash</string>
    <string name="application_name">Clash for Android</string>

    <string name="clash_status_stopped">Stopped</string>
    <string name="clash_status_click_to_start">Click here to start</string>
    <string name="clash_status_started">Running</string>
    <string name="clash_status_forwarded_traffic">%s Forwarded</string>

    <string name="clash_proxy_manage">Proxy</string>
    <string name="clash_proxy_manage_summary_rule">Rule Mode</string>
    <string name="clash_proxy_manage_summary_direct">Direct Mode</string>
    <string name="clash_proxy_manage_summary_global">Global Mode</string>

    <string name="clash_profiles">Profiles</string>
    <string name="clash_profiles_summary_selected">%s Activated</string>
    <string name="clash_profiles_summary_unselected">Unselected</string>

    <string name="clash_logs">Logs</string>
    <string name="clash_settings">Settings</string>
    <string name="clash_feedback">Feedback</string>
    <string name="clash_about">About</string>

    <string name="clash_profile_item_summary_file">%s (File)</string>
    <string name="clash_profile_item_summary_url">%s (URL)</string>
    <string name="clash_profile_remove">Remove</string>
    <string name="clash_profile_updating">Profile Updating</string>

    <string name="clash_new_profile">New Profile</string>
    <string name="clash_new_profile_file_title">File</string>
    <string name="clash_new_profile_file_summary">From Local Storage</string>

    <string name="clash_new_profile_url_title">URL</string>
    <string name="clash_new_profile_url_summary">From Internet</string>

    <string name="clash_import_from_file">Import From File</string>
    <string name="clash_import_from_url">Import From URL</string>

    <string name="clash_profile_name">Name</string>
    <string name="clash_profile_name_hint">Unlabeled</string>

    <string name="clash_profile_file">File</string>
    <string name="clash_profile_file_hint">content://</string>

    <string name="clash_profile_url">URL</string>
    <string name="clash_profile_url_hint">https://</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="clash_import_file_empty_name">Empty Name</string>
    <string name="clash_import_file_empty_path">Empty Path</string>
    <string name="clash_profile_invalid">Invalid Config: %s</string>

    <string name="clash_proxy_group_title">%s - %s</string>

    <string name="application_setting_title">Setting</string>
    <string name="application_setting_application">Application</string>
    <string name="application_setting_proxy">Proxy</string>

    <string name="proxy_setting_vpn_mode">VPN Mode</string>
    <string name="proxy_setting_vpn_mode_summary">Handle all system traffic</string>
    <string name="proxy_setting_proxy_mode">Proxy Only Mode</string>
    <string name="proxy_setting_proxy_mode_summary">Start clash core only</string>
    <string name="proxy_setting_vpn_setting">VPN Settings</string>
    <string name="proxy_setting_vpn_setting_access_control">Access Control</string>
    <string name="proxy_setting_vpn_setting_access_control_summary">Configure access permission for apps</string>
    <string name="proxy_setting_vpn_setting_bypass_private_network">Bypass Private Network</string>
    <string name="proxy_setting_vpn_setting_bypass_private_network_summary">Bypass private network subnet</string>
    <string name="proxy_setting_vpn_setting_ipv6">IPv6 Support</string>
    <string name="proxy_setting_vpn_setting_ipv6_summary">Routing IPv6 traffic</string>

    <string name="access_setting_allow_all">Global</string>
    <string name="access_setting_allow_all_summary">Allow all apps access vpn</string>
    <string name="access_setting_allow">Whitelist</string>
    <string name="access_setting_allow_summary">Allow follow apps access vpn</string>
    <string name="access_setting_disallow">Blacklist</string>
    <string name="access_setting_disallow_summary">Disallow follow apps access vpn</string>
    <string name="access_setting_loading">Loading</string>
    <string name="access_setting_show_header">Show Mode</string>
    <string name="access_setting_hide_header">Hide Mode</string>
    <string name="access_setting_select_all">Select All</string>
    <string name="access_setting_select_invert">Select Invert</string>
    <string name="access_setting_clean_selection">Clear Selection</string>

    <string name="application_setting_behavior">Behavior</string>
    <string name="application_setting_start_on_boot">Start on Boot</string>
    <string name="application_setting_start_on_boot_summary">Start clash on system boot</string>

    <string name="clash_start_service_notification_channel">Clash Start Service</string>
    <string name="clash_start_service_notification">Starting Clash</string>
    
    <string name="not_implemented">Not Implemented</string>

    <string name="feedback_source">Source &amp; Issues</string>
    <string name="feedback_upstream">Upstream</string>
    <string name="feedback_github_repo">Github</string>

    <string name="feedback_group">Groups</string>
    <string name="feedback_telegram_channel">Telegram Channel</string>
    <string name="feedback_telegram_group">Telegram Group</string>

    <string name="feedback_upstream_url" translatable="false">https://github.com/Dreamacro/clash</string>
    <string name="feedback_github_repo_url" translatable="false">https://github.com/Kr328/ClashForAndroid</string>
    <string name="feedback_telegram_group_url" translatable="false">https://t.me/clash_for_android</string>
    <string name="feedback_telegram_channel_url" translatable="false">https://t.me/clash_for_android_channel</string>

    <string name="about_power_by_clash">Power by Clash</string>
</resources>
