<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_setting_access_toolbar"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </com.google.android.material.appbar.AppBarLayout>



    <com.github.kr328.clash.view.RadioFatItem
        app:title="@string/access_setting_allow_all"
        app:summary="@string/access_setting_allow_all_summary"
        android:id="@+id/activity_setting_access_allow_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.kr328.clash.view.RadioFatItem
        app:title="@string/access_setting_allow"
        app:summary="@string/access_setting_allow_summary"
        android:id="@+id/activity_setting_access_allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.kr328.clash.view.RadioFatItem
        app:title="@string/access_setting_disallow"
        app:summary="@string/access_setting_disallow_summary"
        android:id="@+id/activity_setting_access_disallow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/activity_setting_access_divider"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_setting_access_app_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/activity_setting_access_loading"
        android:text="@string/access_setting_loading"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp"
        android:visibility="gone"/>
</LinearLayout>