<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetStart="0dp" />

    <include layout="@layout/activity_main_clash_status" />
    <include layout="@layout/activity_main_proxy_manage" />
    <include layout="@layout/activity_main_profiles" />

    <LinearLayout
        android:id="@+id/activity_main_clash_logs"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/clash_logs"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_logs" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/clash_logs"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_clash_settings"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/clash_settings"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_settings" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/clash_settings"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_clash_feedback"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/clash_feedback"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_feedback" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/clash_feedback"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_clash_about"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/clash_about"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_about" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/clash_about"/>
    </LinearLayout>
</LinearLayout>
