<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_import_file_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_import_file_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_gravity="end">
                    <ImageView
                        android:id="@+id/activity_import_file_save"
                        android:padding="10dp"
                        android:src="@drawable/ic_save"
                        android:contentDescription="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"/>
                    <ProgressBar
                        android:id="@+id/activity_import_file_saving"
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_about"
            android:contentDescription="@string/app_name"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <LinearLayout
            android:id="@+id/activity_import_file_name"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <TextView
                android:text="@string/clash_profile_name"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/activity_import_file_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_profile_edit"
                android:padding="5dp"
                android:lines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/clash_profile_name_hint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_new_profile_file"
            android:contentDescription="@string/app_name"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <LinearLayout
            android:id="@+id/activity_import_file_path"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <TextView
                android:text="@string/clash_profile_file"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/activity_import_file_path_text"
                android:drawableEnd="@drawable/ic_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:lines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/clash_profile_file_hint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>